# poc_exel-api

./: .gitignore  README.md  pyproject.toml
extras/: Libro1.xlsx
src/: processes.py  suma_api.py
